[package]
name = "node-libxml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
neon = "0.10.1"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
xmltree = "0.10.3"

[lib]
crate-type = ["cdylib"]
name = "libxml"
path = "src/lib.rs"

[profile.release]
debug = true
